--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@angular/common": "~12.0.0",
     "@angular/compiler": "~12.0.0",
     "@angular/core": "~12.0.0",
+    "@angular/fire": "^7.0.4",
     "@angular/forms": "~12.0.0",
     "@angular/platform-browser": "~12.0.0",
     "@angular/platform-browser-dynamic": "~12.0.0",
     "@angular/router": "~12.0.0",
+    "firebase": "^9.0.1",
     "lottie-web": "^5.7.11",
     "ngx-lottie": "^7.0.1",
     "rxjs": "~6.6.0",
