--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.0.0",
     "firebase": "^9.0.1",
     "lottie-web": "^5.7.11",
+    "ngx-device-detector": "^2.1.1",
     "ngx-lottie": "^7.0.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
